--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -67,4 +67,7 @@
 
     <string name="pref_headset_behaviour_title">Headset and Bluetooth behaviour</string>
     <string name="pref_headset_behaviour_summary">Invoke Bluetooth behaviour when headset is removed</string>
+
+    <string name="enableFM">Enable FM</string>
+    <string name="disableFM">Disable FM</string>
 </resources>
